# moderngl

./: .appveyor.yml  .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  _moderngl.py  mypy.ini  pyproject.toml  run_rests.sh  setup.cfg  setup.py  test.py  tox.ini
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  requirements.txt
examples/: 01_hello_world.py  02_shader.py  03_camera.py  04_vertex_buffer.py  05_uniforms.py  06_multiple_objects.py  07_different_geometries.py  08_texture.py  09_models_and_images.py  10_lighting.py  11_multiple_programs.py  12_uniform_buffer.py  13_shader_includes.py  14_postprocessing.py  15_pillow_overlay.py  README.md  _example.py  _print_memory.py  alpha_blending.py  alpha_blending_reverse_subtract.py  attribute_locations.py  basic_colors_and_texture.py  basic_empty_window.py  basic_simple_color_triangle.py  bindless_textures.py  buffer_creation.py  color_cube.py  color_triangle.py  compute_shader_ssbo.py  conways_game_of_life.py  crate.py  crate_uniform_buffer.py  creating_separate_window.py  empty_framebuffer.py  empty_vertex_array.py  empty_vertexbuffer.py  explicit_attrib_location.py  external_buffer.py  external_texture.py  fragment_output.py  (+53 more)
moderngl/: __init__.py  __main__.py  buffer.py  common.hpp  compiler.py  compute_shader.py  conditional_render.py  context.py  converters.cpp  converters.hpp  data_types.hpp  debug.py  error.py  extras.cpp  extras.hpp  framebuffer.py  limits.py  (+22 more)
moderngl-stubs/: __init__.pyi
(+420 files in other folders)
